--- a/components/libs/card-people-list/index.module.scss
+++ b/components/libs/card-people-list/index.module.scss
@@ -1,8 +1,11 @@
 .imageContainer {
   :global(.ant-image) {
     width: 100%;
+    height: 100%;
     img {
       object-fit: cover;
+      height: 100%;
+      width: 100%;
     }
   }
 }
