ADD: Validation for all form

--- a/components/libs/work-experience-list-item/index.module.scss
+++ b/components/libs/work-experience-list-item/index.module.scss
@@ -9,3 +9,16 @@
     margin-top: 20px;
   }
 }
+
+.actionContainer {
+  // display: flex;
+  // justify-content: flex-end;
+  text-align: right;
+}
+
+.deleteIcon {
+  cursor: pointer;
+  &:hover {
+    color: #f5222d;
+  }
+}
